# gegl-rs

./: .gitignore  .gitmodules  Babl-0.1.gir  Gegl-0.4.gir  README.md
gegl/: Cargo.toml  Gir.toml  Gir.toml.old  docs.md
gegl/src/: functions.rs  lib.rs  rectangle.rs
gegl/src/auto/: audio_fragment.rs  buffer.rs  color.rs  config.rs  enums.rs  flags.rs  functions.rs  matrix3.rs  metadata.rs  metadata_hash.rs  metadata_store.rs  mod.rs  operation.rs  param_audio_fragment.rs  param_color.rs  param_curve.rs  param_path.rs  path.rs  processor.rs  random.rs  rectangle.rs  stats.rs  tile_backend.rs  tile_handler.rs  tile_source.rs  versions.txt
gegl/sys/: Cargo.toml  Gir.toml
gegl/sys/src/: lib.rs
gegl/sys/src/auto/: versions.txt
gegl/sys/tests/: abi.rs  constant.c  layout.c  manual.h
