[package]
name = "gegl"
version = "0.1.0"
edition = "2021"

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
libc = "0.2"
bitflags = "2.2"

glib = "0.20.7"

glib-sys = "0.20.7"
gobject-sys = "0.20.7"

[dependencies.ffi]
package = "gegl-sys"
path = "./sys"

[dependencies.babl]
git = "https://github.com/zUnixorn/babl-rs.git"

[dependencies.babl-sys]
git = "https://github.com/zUnixorn/babl-rs.git"
