[package]
name = "gegl-sys"
version = "0.0.1"
edition = "2021"
build = "build.rs"

[package.metadata.system-deps.gegl_0_4]
name = "gegl-0.4"
version = "0.4"

[package.metadata.system-deps.gegl_0_4.v0_4_2]
version = "0.4.2"

[package.metadata.system-deps.gegl_0_4.v0_4_14]
version = "0.4.14"

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]
all-features = true

[lib]
name = "gegl_sys"

[dependencies]
libc = "0.2"
glib-sys = "0.20.7"
gobject-sys = "0.20.7"

[dependencies.babl-sys]
git = "https://github.com/zUnixorn/babl-rs.git"

[build-dependencies]
system-deps = "7"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
v0_4_2 = []
v0_4_14 = ["v0_4_2"]
